// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routines findAll should return all routines 1`] = `
Array [
  RowDataPacket {
    "createdAt": 2018-01-01T00:00:00.000Z,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "enabled": true,
    "failReason": null,
    "interval": "0 5 * * *",
    "lastFailedAt": "0000-00-00 00:00:00",
    "lastRunAt": "0000-00-00 00:00:00",
    "name": "test at 5am",
    "nextRunAt": "0000-00-00 00:00:00",
    "routineId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "runAtBankHoliday": true,
    "sceneId": "00c1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "updatedAt": 2018-01-02T00:00:00.000Z,
  },
  RowDataPacket {
    "createdAt": 2018-01-01T00:00:00.000Z,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "enabled": true,
    "failReason": null,
    "interval": "0 9 * * *",
    "lastFailedAt": "0000-00-00 00:00:00",
    "lastRunAt": "0000-00-00 00:00:00",
    "name": "test at 9am",
    "nextRunAt": "0000-00-00 00:00:00",
    "routineId": "1fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "runAtBankHoliday": false,
    "sceneId": "10c1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "updatedAt": 2018-01-02T00:00:00.000Z,
  },
]
`;

exports[`Routines findById should return only one routine 1`] = `
RowDataPacket {
  "createdAt": 2018-01-01T00:00:00.000Z,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "enabled": true,
  "failReason": null,
  "interval": "0 5 * * *",
  "lastFailedAt": "0000-00-00 00:00:00",
  "lastRunAt": "0000-00-00 00:00:00",
  "name": "test at 5am",
  "nextRunAt": "0000-00-00 00:00:00",
  "routineId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
  "runAtBankHoliday": true,
  "sceneId": "00c1d78e-fd1c-4717-b610-65d2fa3d01b2",
  "updatedAt": 2018-01-02T00:00:00.000Z,
}
`;

exports[`Routines save should save a new routine 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "enabled": true,
  "failReason": null,
  "interval": "schedule",
  "lastFailedAt": "0000-00-00 00:00:00",
  "lastRunAt": "0000-00-00 00:00:00",
  "name": "test_3",
  "nextRunAt": "0000-00-00 00:00:00",
  "routineId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "runAtBankHoliday": true,
  "sceneId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "updatedAt": Any<Date>,
}
`;
